# gnomebaker

./: .cvsignore  AUTHORS  CONTRIBUTORS  ChangeLog  GnomeBakerCodingStandards.txt  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  gnomebaker.desktop  gnomebaker.desktop.in  gnomebaker.glade  gnomebaker.prj  mkinstalldirs  xmldocs.make
help/: Makefile.in
help/C/: .cvsignore  Makefile.am  Makefile.in  gnomebaker-C.omf  gnomebaker.xml
intl/: Makefile.in
macros/: Makefile.in
media/: Makefile  Makefile.am  Makefile.in
pixmaps/: Makefile.am  Makefile.in
po/: .cvsignore  ChangeLog  Makefile.in  POTFILES.in  af.po  am.po  ar.po  az.po  be.po  bg.po  bn.po  bo.po  bs.po  ca.po  cs.po  da.po  de.po  de_AT.po  de_CH.po  de_DE.po  el.po  en.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  es_AR.po  es_CO.po  es_CR.po  es_ES.po  es_MX.po  et.po  eu.po  eu_ES.po  fa.po  fi.po  fr.po  fr_CH.po  (+51 more)
src/: .cvsignore  Makefile.am  Makefile.in  audiocd.c  audiocd.h  audioinfo.c  audioinfo.h  audioproject.c  audioproject.h  backend.c  backend.h  burn.c  burn.h  cairofillbar.c  cairofillbar.h  cdda2wav.c  cdda2wav.h  cdrecord.c  cdrecord.h  datacd.c  datacd.h  datadvd.c  datadvd.h  dataproject.c  dataproject.h  devices.c  devices.h  dvdfunctions.c  dvdfunctions.h  exec.c  exec.h  execfunctions.c  execfunctions.h  filebrowser.c  filebrowser.h  gbcommon.c  gbcommon.h  gblibnotify.c  gblibnotify.h  gnomebaker.c  (+30 more)
