AC_INIT(GnomeBaker, 0.5.2, gnomebaker)
AC_PREREQ(2.59)
AC_COPYRIGHT([Copyright (C) 2003-2006 Luke Biddell])

AC_CONFIG_SRCDIR(src/gnomebaker.h)
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(1.9 -Wall dist-bzip2 no-define)

AM_MAINTAINER_MODE
 

dnl -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64

AC_ISC_POSIX
AC_SYS_LARGEFILE
AC_PROG_CC
AC_HEADER_STDC
AM_PATH_GLIB_2_0

AC_PROG_INTLTOOL

dnl --------------------------------------------------------------------
dnl
dnl Library Dependencies, uses pkg-config to detect correct version, etc
dnl
dnl --------------------------------------------------------------------

AC_SUBST(LIBGNOME_REQUIRED, 2.8.1)
AC_SUBST(GTK_REQUIRED, 2.4.0)
AC_SUBST(GLIB_REQUIRED, 2.4.0)
AC_SUBST(LIBGLADE_REQUIRED, 2.4.2)
AC_SUBST(GSTREAMER_REQUIRED, 0.8.9)

PKG_CHECK_MODULES(GNOMEBAKER,
[
	libgnomeui-2.0 >= $LIBGNOME_REQUIRED
	gtk+-2.0 >= $GTK_REQUIRED
	glib-2.0 >= $GLIB_REQUIRED
	libglade-2.0 >= $LIBGLADE_REQUIRED
	gstreamer-0.8 >= $GSTREAMER_REQUIRED
])

AC_SUBST(GNOMEBAKER_CFLAGS)
AC_SUBST(GNOMEBAKER_LIBS)

dnl -------------------------------------------------------------------
dnl Language Support
dnl -------------------------------------------------------------------
GETTEXT_PACKAGE=gnomebaker
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[Gettext package name])

ALL_LINGUAS="af az bg bo ca cs da de_AT de_CH de_DE de el en_AU en_CA en en_US eo es_AR es_CO es_CR es_ES es_MX es et eu_ES eu fa fi fr_CH fr_FR fr gl he hr hu is it_IT it ja ka ko lt lv mk ml ms nb nl_BE nl_NL nl no pa pl pt_BR pt pt_PT ro ru sk sl sr st sv sv_SE te tl tr uk urd yi zh_CN zh_HK zh zh_TW"
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
src/Makefile
pixmaps/Makefile
media/Makefile
gnomebaker.desktop
help/Makefile
help/C/Makefile
po/Makefile.in
])

echo
dnl ==========================================================================
echo "
                    GnomeBaker $VERSION
===========================================================

        prefix:                    ${prefix}
        compiler:                  ${CC}
        cflags:                    ${CFLAGS}
"
echo
