gnomebaker_pixmapsdir = $(datadir)/gnomebaker

gnomebaker_pixmaps_DATA = \
	baker-add-dir.png\
	baker-add-files.png\
	baker-audio-copy.png\
	baker-blank-cdrw.png\
	baker-burn-cd.png\
	baker-cd.png\
	baker-data-copy.png\
	gnomebaker-48.png\
	splash_2.png\
	baker-import-session.png\
	baker-blank-dvdrw.png\
	baker-cd-iso.png\
	baker-cue-image.png\
	baker-dvd-iso.png\
	baker-remove-files.png\
	state00.png\
	state01.png\
	state02.png\
	state03.png\
	state04.png\
	state05.png\
	state06.png\
	state07.png\
	state08.png\
	state09.png\
	state10.png\
	state11.png\
	state12.png\
	state13.png
	

EXTRA_DIST = $(gnomebaker_pixmaps_DATA)
