## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(GNOME_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = gnomebaker

gnomebaker_SOURCES = \
	main.c\
	progressdlg.c\
	progressdlg.h\
	burn.c\
	burn.h\
	exec.c\
	exec.h\
	devices.c\
	devices.h\
	filebrowser.c\
	filebrowser.h\
	preferences.c\
	preferences.h\
	gnomebaker.c\
	gnomebaker.h\
	startdlg.c\
	startdlg.h\
	prefsdlg.c\
	prefsdlg.h\
	splashdlg.c\
	splashdlg.h\
	audiocd.c\
	audiocd.h\
	datacd.c\
	datacd.h\
	gbcommon.h\
	gbcommon.c\
	audioinfo.c\
	audioinfo.h\
	selectdevicedlg.c\
	selectdevicedlg.h\
	execfunctions.c\
	execfunctions.h

gnomebaker_LDFLAGS = 

gnomebaker_LDADD =  \
	$(GNOME_LIBS)
